--- a/css/custom.css
+++ b/css/custom.css
@@ -1,146 +1,144 @@
-	html {
-		font-size: 16px;
-	}
+html {
+	font-size: 16px;
+}
 
-	.header {
-		background-color: #e9ecef;
-		padding: 1rem 0 2rem 0;
-		margin-bottom: 1.5rem;
-	}
+.header {
+	background-color: #e9ecef;
+	padding: 1rem 0 2rem 0;
+	margin-bottom: 1.5rem;
+}
 
-	.info-img > img {
-		width: 100%;
-		height: 100%;
-		max-height: 220px;
-		max-width: 220px;
-		-moz-transition: all 0.3s ease-out;
-		-o-transition: all 0.3s ease-out;
-		-webkit-transition: all 0.3s ease-out;
-	}
+.info-img > img {
+	width: 100%;
+	height: 100%;
+	max-height: 220px;
+	max-width: 220px;
+	-moz-transition: all 0.3s ease-out;
+	-o-transition: all 0.3s ease-out;
+	-webkit-transition: all 0.3s ease-out;
+}
 
-	.info-img img:hover{
-		-webkit-transform: scale(1.02);
-		-moz-transform: scale(1.02);
-		-o-transform: scale(1.02);
-	}
+.info-img img:hover{
+	-webkit-transform: scale(1.02);
+	-moz-transform: scale(1.02);
+	-o-transform: scale(1.02);
+}
 
-	.info a {
-		/*display: block;*/
-		/*color: rgba(255,255,255,.8);*/
-		color: rgba(0,0,0,.5);
-		/*background: rgba(0,0,0,.7);*/
-		border-radius: 5px;
-		/*padding: 3px;*/
-		font-weight: 400;
-		font-size: 1rem;
-	}
+.info a {
+	/*display: block;*/
+	/*color: rgba(255,255,255,.8);*/
+	color: rgba(0,0,0,.5);
+	/*background: rgba(0,0,0,.7);*/
+	border-radius: 5px;
+	/*padding: 3px;*/
+	font-weight: 400;
+	font-size: 1rem;
+}
 
-	.info a:hover {
-		/*text-decoration: none;*/
-		/*color: rgba(255,255,255,.8);*/
-		/*background: rgba(0,0,0,.9);*/
-	}
+.info a:hover {
+	/*text-decoration: none;*/
+	/*color: rgba(255,255,255,.8);*/
+	/*background: rgba(0,0,0,.9);*/
+}
 
-	.img-container {
-		overflow: hidden;
-		position: relative;
-	}
+.img-container {
+	overflow: hidden;
+	position: relative;
+}
 
-	.img-view {
-		-webkit-transition: -webkit-transform 0.15s ease 0s;
-		-moz-transition: -moz-transform 0.15s ease 0s;
-		-o-transition: -o-transform 0.15s ease 0s;
-		transition: transform 0.15s ease 0s;
-		-webkit-transform: scale3d(1, 1, 1);
-		transform: scale3d(1, 1, 1);
-		height: 100%;
-		width: 100%;
-	}
+.img-view {
+	-webkit-transition: -webkit-transform 0.15s ease 0s;
+	-moz-transition: -moz-transform 0.15s ease 0s;
+	-o-transition: -o-transform 0.15s ease 0s;
+	transition: transform 0.15s ease 0s;
+	-webkit-transform: scale3d(1, 1, 1);
+	transform: scale3d(1, 1, 1);
+	height: 100%;
+	width: 100%;
+}
 
-	.img-view:hover {
-		-webkit-transform: scale(1.05);
-		-moz-transform: scale(1.05);
-		-o-transform: scale(1.05);
-	}
+.img-view:hover {
+	-webkit-transform: scale(1.05);
+	-moz-transform: scale(1.05);
+	-o-transform: scale(1.05);
+}
 
-	.bolder {
-		font-weight: bold;
-	}
+.bolder {
+	font-weight: bold;
+}
 
-	.navbar-light .navbar-toggler {
-		border-color: rgba(0,0,0,0);
-		margin-right: -15px;
-	}
+.navbar-light .navbar-toggler {
+	border-color: rgba(0,0,0,0);
+	margin-right: -15px;
+}
 
-	@media (max-width: 991px){
-		.social {
-			text-align: center;
-		}
-		.social a {
-			margin: 0px 5px;
-			font-size: 1.2rem;
-		}
-		.header .info-img {
-			margin-bottom: 1rem;
-		}
-		h2.name {
-			text-align: center;
-		}
-		.info {
-			text-align: center;
-		}
-		p.lead {
-			margin-bottom: 0;
-		}
-	}
-
-	@media (min-width:768px) and (max-width: 991px){
-		.info-img > img {
-			max-width: 200px;
-			max-height: 200px;
-		}
-	}
-
-	.shadow-sm {
-		transition: all 0.3s ease-out 0s;
-	}
-
-	.shadow-sm:hover {
-		box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
-	}
-
-	.animate {
-		-webkit-transition: all 0.3s ease-in-out;
-		-moz-transition: all 0.3s ease-in-out;
-		-o-transition: all 0.3s ease-in-out;
-		-ms-transition: all 0.3s ease-in-out;
-		transition: all 0.3s ease-in-out;
-	}
-
+@media (max-width: 991px){
 	.social {
-		list-style: none;
-		padding: 0;
-		/*margin-top: 25px;*/
-		/*text-align: center;*/
-	}
-
-	.social a {
-		position: relative;
-		/*display: inline-block;*/
-		margin: 0px 2px;
-		overflow: hidden;
 		text-align: center;
-		background-color: rgb(255, 255, 255);
 	}
+	.social a {
+		margin: 0px 5px;
+		font-size: 1.2rem;
+	}
+	.header .info-img {
+		margin-bottom: 1rem;
+	}
+	h2.name {
+		text-align: center;
+	}
+	.info {
+		text-align: center;
+	}
+	p.lead {
+		margin-bottom: 0;
+	}
+}
 
-	a.social-icon {
-		text-decoration: none !important;
-/*		box-shadow: 0px 0px 1px rgb(51, 51, 51);
-box-shadow: 0px 0px 1px rgba(51, 51, 51, 0.7);*/
-/*padding: 13px;*/
-padding: 0.8rem;
-border-radius: 50%;
-background-color: rgb(255, 255, 255);
+@media (min-width:768px) and (max-width: 991px){
+	.info-img > img {
+		max-width: 200px;
+		max-height: 200px;
+	}
+}
+
+.shadow-sm {
+	transition: all 0.3s ease-out 0s;
+}
+
+.shadow-sm:hover {
+	box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+}
+
+.animate {
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+/* ---------- SOCIAL ICONS ---------- */
+
+.social {
+	list-style: none;
+	padding: 0;
+}
+
+.social a {
+	position: relative;
+	margin: 0px 2px;
+	overflow: hidden;
+	text-align: center;
+	background-color: rgb(255, 255, 255);
+}
+
+a.social-icon {
+	text-decoration: none !important;
+/*	box-shadow: 0px 0px 1px rgb(51, 51, 51);
+	box-shadow: 0px 0px 1px rgba(51, 51, 51, 0.7);*/
+	padding: 0.8rem;
+	border-radius: 50%;
+	background-color: rgb(255, 255, 255);
 }
 a.social-icon:hover {
 	color: rgb(255, 255, 255) !important;
@@ -197,7 +195,7 @@ a.email:hover {
 }
 
 
-/* --------- ---------- */
+/* --------- CARD STYLES ---------- */
 
 .card {
 	font-size: 1em;
@@ -250,38 +248,6 @@ a.email:hover {
 
 .card-inverse .btn {
 	border: 1px solid rgba(0, 0, 0, .05);
-}
-
-.profile {
-	position: absolute;
-	top: -12px;
-	display: inline-block;
-	overflow: hidden;
-	box-sizing: border-box;
-	width: 25px;
-	height: 25px;
-	margin: 0;
-	border: 1px solid #fff;
-	border-radius: 50%;
-}
-
-.profile-avatar {
-	display: block;
-	width: 100%;
-	height: auto;
-	border-radius: 50%;
-}
-
-.profile-inline {
-	position: relative;
-	top: 0;
-	display: inline-block;
-}
-
-.profile-inline ~ .card-title {
-	display: inline-block;
-	margin-left: 4px;
-	vertical-align: top;
 }
 
 .text-bold {
